[scss] fix delegate button vertical align

--- a/src/adhocracy/static_src/stylesheets/components/_button.scss
+++ b/src/adhocracy/static_src/stylesheets/components/_button.scss
@@ -115,7 +115,6 @@ a.follow_paper {
 
 /* delegate button */
 a.button.delegate {
-    margin: 0 0 20px;
     @include button-round;
 }
 
