--- a/src/adhocracy/static_src/stylesheets/components/_vote.scss
+++ b/src/adhocracy/static_src/stylesheets/components/_vote.scss
@@ -149,9 +149,3 @@
         }
     }
 }
-
-.vote_wrapper .or {
-    display: inline-block;
-    vertical-align: top;
-    padding-top: 6px
-}
